# openplc-runtime

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  conftest.py  install.sh  plugins.conf  plugins_default.conf  project.yml  requirements.txt  start_openplc.sh  test_api.py
.github/workflows/: docker.yml
core/src/: CMakeLists.txt  glueVars.c  image_tables.c  image_tables.h  plc_main.c
core/src/drivers/: README.md  plugin_driver.c  plugin_driver.h  plugin_types.h
core/src/drivers/plugins/native/: plugin_logger.c
core/src/drivers/plugins/native/s7comm/: CMakeLists.txt  s7comm_config.json  s7comm_plugin.cpp  s7comm_plugin.h
core/src/drivers/plugins/native/s7comm/snap7/core/: s7_client.cpp  s7_client.h  s7_firmware.h  s7_isotcp.cpp  s7_isotcp.h  s7_micro_client.cpp  s7_micro_client.h  s7_partner.cpp  s7_partner.h  s7_peer.cpp  s7_peer.h  s7_server.cpp  s7_server.h  s7_text.cpp  s7_text.h  s7_types.h
core/src/drivers/plugins/native/s7comm/snap7/lib/: snap7_libmain.cpp  snap7_libmain.h
core/src/drivers/plugins/native/s7comm/snap7/sys/: snap_msgsock.cpp  snap_msgsock.h  snap_platform.h  snap_sysutils.cpp  snap_sysutils.h  snap_tcpsrvr.cpp  snap_tcpsrvr.h  snap_threads.h  sol_threads.h  unix_threads.h  win_threads.h
core/src/drivers/plugins/python/canbus_master/: canbus_master.py
core/src/drivers/plugins/python/modbus_master/: conftest.py  modbus_master.json  modbus_master_plugin.py  test_modbus_master_plugin.py  test_modbus_slave_device.py
core/src/drivers/plugins/python/modbus_slave/: simple_modbus.py  test_modbus_slave.py  test_slave_edge_cases.py
core/src/drivers/plugins/python/shared/: __init__.py  buffer_accessor.py  plugin_logger.py  plugin_runtime_args.py  python_plugin_types.py  safe_buffer_access_refactored.py
core/src/drivers/plugins/python/shared/plugin_config_decode/: modbus_master_config_model.py  plugin_config_contact.py  test_plugin_config_models.py
core/src/plc_app/: image_tables.c  image_tables.h  journal_buffer.c  plc_main.c  plc_state_manager.c  plcapp_manager.c  plcapp_manager.h  python_loader.c  scan_cycle_manager.c  scan_cycle_manager.h  unix_socket.c  unix_socket.h
core/src/plc_app/utils/: log.c  log.h  utils.c  utils.h  watchdog.c  watchdog.h
core/src/utils/: utils.c  utils.h
scripts/: compile-clean.sh  compile.sh  run-image-dev.sh  run-image.sh  setup-tests-env.sh
tests/: test_basic_functionality.c
webserver/: DEBUG_WEBSOCKET.md  __init__.py  app.py  config.py  credentials.py  debug_websocket.py  plcapp_management.py  restapi.py  runtimemanager.py  unixclient.py  unixserver.py
webserver/logger/: __init__.py  bufferhandler.py  config.py  formatter.py  logger.py  logger_module_documentation.md  parser.py
